# i2a2

./: .gitignore  LICENSE  README.md
.devcontainer/: devcontainer.json
desafioIndividual/eda_agent_app/: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml  railway.toml
desafioIndividual/eda_agent_app/src/eda_agent/: agent_codegen.py  executor.py  state.py
desafioIndividual/eda_agent_app/src/eda_agent/agents/: base.py  codegen_agent.py  critic_agent.py  summary_agent.py
